2007-04-15  Glenn Morris  <rgm@gnu.org>

	* FTP: Make it a duplicate of ../FTP.

2007-04-14  Glenn Morris  <rgm@gnu.org>

	* SERVICE: Replace with a pointer to the web version.

	* emacs.1: Update some of the more obsolete information.

2007-04-13  Glenn Morris  <rgm@gnu.org>

	* MACHINES: emacserver is removed.

	* MORE.STUFF: Update some links, remove some dead ones.

2007-04-04  Slawomir Nowaczyk  <slawomir.nowaczyk.847@student.lu.se>

	* emacs.py (format_exception): New function.
	(eexecfile): Use it instead of traceback.print_exception.
	Don't use execfile to avoid a bug in w32.

2007-04-04  Glenn Morris  <rgm@gnu.org>

	* MACHINES: Mention preprocessor to use with /opt/SUNWspro/bin/cc
	on Solaris.

	* PROBLEMS (Configuration): Add entries on compiler/preprocessor
	mismatch, and on preprocessor inserting whitespace.

2007-04-03  Eli Zaretskii  <eliz@gnu.org>

	* TODO: Add entry for switching MS-Windows keyboard input to
	Unicode.  Add specific pointer to msdos.c functions that support
	menus on text terminals.

2007-04-01  Michael Olson  <mwolson@gnu.org>

	* ERC-NEWS: Update for the ERC 5.2 release.  Most of these entries
	were for previously-committed changes.

2007-03-31  Michael Albinus  <michael.albinus@gmx.de>

	* PROBLEMS: Remove Tramp problem; it has been fixed.

2007-03-31  Eli Zaretskii  <eliz@gnu.org>

	* PROBLEMS (MS-Windows problems): How to bind non-ASCII keys with
	modifiers.

2007-03-23  Glenn Morris  <rgm@gnu.org>

	* Makefile (DESTDIR, LIBDIR, BINDIR, MANDIR, MANEXT):
	Delete unused variables.
	(dired-refcards, misc-refcards, survival-card, viper-cards):
	New targets.
	(all): Also build dired-refcards and misc-refcards.
	(clean, distclean, maintainer-clean): Depend on mostlyclean.
	(SOURCES): Remove non-existent files.
	(mostlyclean, clean, distclean, maintainer-clean, unlock, relock):
	Mark as phony.
	(.ps files): Specify default papersize in the dvips command.

	* fr-refcard.tex (\letterpaper): Switch to A4.