@@ -1,3 +1,7 @@
+2007-04-17  David Kastrup  <dak@gnu.org>
+
+	* NEWS: Mention `query-replace-regexp-eval' being deprecated.
+
 2007-04-15  Glenn Morris  <rgm@gnu.org>
 
 	* FTP: Make it a duplicate of ../FTP.
